[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "peekguard"
description = "PeekGuard is a tool for extracting and managing sensitive information from code repositories."
version = "0.0.1"
requires-python = "==3.12.9"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.29.0",
    "presidio-analyzer==2.2.358",
    "spacy==3.8.6",
    "pyap2==0.1.11",
    "pytest==8.4.1",
    "httpx==0.28.1",
    "hspymonitoring==0.6.0",
    "hvac==0.10.14",
    "google-cloud-dlp==3.34.0",
    "posix_ipc==1.3.0",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[tool.hatch.build.targets.wheel]
include = ["peekguard/**/*", "pyproject.toml"]
exclude = ["peekguard_venv"]

[tool.hatch.build.targets.sdist]
exclude = ["peekguard_venv"]

[tool.hatch.metadata]
allow-direct-references = true